kubernetes-multi-container/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-container-app
  labels:
    name: multi-container-app
